# greenmove

./: Anchor.toml  Cargo.toml  LICENSE  README.md  seed-localnet.sh  surfpool-dev.sh  surfpool-stop.sh  txtx.yml
.mock_device_solar/: Cargo.toml
.mock_device_solar/src/: device.rs  instruction.rs  lib.rs  main.rs  pda.rs  rpc.rs
.plan/: 00-overview.md  01-contribution-graph.md  02-MOCK_DATA_REORGANIZATION.md  03-NAVIGATION_CLEANUP.md  04-ROUTING.md  05-SOLAR_TO_TOKEN_WHITEPAPER.md
.plans/: 01-mock_solarcell.md  02-network_switcher.md  02-surfpool_integration.md  03-solana_wallet_integration.md  04-mock_device_to_blockchain.md  05-consumption-local-ui.md
app/: package-lock.json  package.json
app/src/: App.tsx  index.css  main.tsx
app/src/components/: ErrorFallback.tsx  NotFound.tsx
app/src/constants/: index.ts  network.ts
app/src/hooks/: useBlockchainData.ts  useConsumptionData.ts  useDashboardData.ts  useKYCData.ts  useOnchainDevices.ts  useOnchainRecords.ts  useSwapData.ts  useWalletConnection.ts
app/src/lib/: SolanaContext.tsx  accountParser.ts  blockchain.ts  colors.ts  mockData.ts  program.ts
app/src/mock/: blockchain.ts  consumption.ts  dashboard.ts  index.ts  kyc.ts  solar.ts  swap.ts  wallet.ts
app/src/pages/: Blockchain.tsx  Consumption.tsx  Dashboard.tsx  Devices.tsx  KYC.tsx  Swap.tsx
app/src/stores/: consumptionStore.ts  index.ts  kycStore.ts  networkStore.ts  walletStore.ts
app/src/types/: blockchain.ts  index.ts  (+3 more)
app/types/: blockchain.ts  index.ts  kyc.ts  swap.ts  wallet.ts
deployment/: main.txtx
programs/greenmove/: Cargo.toml
(+27 files in other folders)
